spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -162,6 +162,7 @@
   width: 90%;
   height: 100px;
   padding-bottom: 20px;
+  margin-top: 10px;
 }
 .card-heading {
   margin: 0px;
@@ -186,7 +187,7 @@
 }
 .card-heading-2{
   margin: 0px;
-  margin-top: 110px;
+  margin-top: 100px;
   margin-bottom: 5px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
